# SHFW2D

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
ExtLibs/: CMakeLists.txt
ExtLibs/glad/: glad.h
SHFW/: Core.cpp  Core.h  Entity.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SHFWConfig.h  SHMath.h  SHTime.cpp  SHTime.h  Shader.cpp  Shader.h  glad.c
Workspace/: main.cpp
